<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/actionbar_packs"
            android:icon="@drawable/pack_list"
            android:showAsAction="always"
            android:title="@string/actionbar_item_packs">
    </item>
    <item
            android:id="@+id/actionbar_edit"
            android:icon="@drawable/pack_edit"
            android:title="@string/actionbar_item_edit"
            android:showAsAction="always">
    </item>
    <item
            android:id="@+id/actionbar_add_pack"
            android:icon="@drawable/pack_add"
            android:title="@string/actionbar_item_add" android:showAsAction="always">
    </item>


    <item
            android:id="@+id/actionbar_change_template_color"
            android:icon="@drawable/template_background_change_button"
            android:title="@string/actionbar_item_change" android:showAsAction="always">
    </item>

    <item
            android:id="@+id/actionbar_help"
            android:icon="@drawable/helping_button"
            android:title="@string/actionbar_item_help" android:showAsAction="always">
    </item>

    <item
            android:id="@+id/actionbar_more"
            android:icon="@drawable/setting_button"
            android:title="@string/actionbar_item_more" android:showAsAction="always">
    </item>

    <item
            android:icon="@drawable/share_button"
            android:title="@string/actionbar_item_share" android:showAsAction="always">

        <menu>
            <item
                    android:id="@+id/actionbar_install_from_code"
                    android:title="Install from the code" />
            <item
                    android:id="@+id/actionbar_share_pack"
                    android:title="Share the pack" />
        </menu>

    </item>

    <item
        android:id="@+id/actionbar_play"
        android:icon="@drawable/play_button"
        android:title="@string/actionbar_item_play" android:showAsAction="always">

        <menu>
            <item
                android:id="@+id/actionbar_play_manually"
                android:title="Play Manually" />
            <item
                android:id="@+id/actionbar_play_auto"
                android:title="Auto Play" />
            <item
                android:id="@+id/actionbar_play_auto_loop"
                android:title="Auto Play and Loop" />
        </menu>

    </item>

</menu>