<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent"
              android:background="#252525"
              android:orientation="vertical">

    <include layout="@layout/dialog_header"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/fragment_add_pack_pack_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:hint="@string/addpack_packname"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:ems="10">
                <requestFocus/>
            </EditText>

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/fragment_add_pack_sidebar_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/addpack_sidebar"
                android:ems="10"/>


            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/fragment_add_pack_creator"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/addpack_Creator"
                android:ems="10"/>

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/fragment_add_pack_job_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/add_pack_edit_text_size"
                android:hint="@string/addpack_Job_Title"
                android:ems="10"/>
            
            <SeekBar
                android:id="@+id/auto_play_speed_seekbar"
                android:max="60"
                android:progress="10"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/fragment_add_pack_coverImage"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:riv_corner_radius="15dp"
                android:background="@drawable/shape_image_round_corner"
                android:src="@drawable/default_pack_cover_image"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>